--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       
       <button id="sign-in">Sign In</button>
       <button id="sign-out" hidden>Sign Out</button>
+       <button id="Button1" hidden>test</button>
 
       <button id="subscribe" hidden>
         Subscribe
