--- a/index.html
+++ b/index.html
@@ -44,10 +44,49 @@
     </footer>
   </div>
 
+
+
+
+  <script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyD4_zMt8NByD4zsxQ8Ugw3NB9MrQN5vfiI",
+        authDomain: "beautycenter-bb072.firebaseapp.com",
+        databaseURL: "https://beautycenter-bb072.firebaseio.com",
+        projectId: "beautycenter-bb072",
+        storageBucket: "beautycenter-bb072.appspot.com",
+        messagingSenderId: "129581670274"
+    };
+    firebase.initializeApp(config);
+
+    // Retrieve Firebase Messaging object.
+const messaging = firebase.messaging();
+
+
+messaging.requestPermission()
+
+.then(function() {
+  console.log('Notification permission granted.');
+  return messaging.getToken();
+  alert(messaging.getToken().toString())
+  
+  // TODO(developer): Retrieve an Instance ID token for use with FCM.
+  // ...
+})
+
+
+.catch(function(err) {
+  console.log('Unable to get permission to notify.', err);
+});
+
+
+
+</script>
+
   <!-- Firebase SDK -->
   <script src="/__/firebase/4.1.3/firebase.js"></script>
   <script src="/__/firebase/init.js"></script>
 
-  <script src="/js/main.js"></script>
+<!--  <script src="/js/main.js"></script>-->
 </body>
 </html>
