--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ const messaging = firebase.messaging();
 messaging.requestPermission()
 
 .then(function() {
-  console.log('Notification permission granted.');
+  alert('Notification permission granted.');
   return messaging.getToken();
   alert(messaging.getToken().toString())
   
@@ -76,7 +76,7 @@ messaging.requestPermission()
 
 
 .catch(function(err) {
-  console.log('Unable to get permission to notify.', err);
+  alert('Unable to get permission to notify.', err);
 });
 
 
