--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ messaging.requestPermission()
 
 .then(function() {
   //alert('Notification permission granted.');
-   alert(messaging.getToken().val().toString())
+   alert(messaging.getToken().toString())
   return messaging.getToken();
  
   
