--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ const messaging = firebase.messaging();
 
 messaging.requestPermission()
 
-/*
+
 .then(function() {
   //alert('Notification permission granted.');
    alert(messaging.getToken())
@@ -85,13 +85,13 @@ messaging.requestPermission()
   
   // TODO(developer): Retrieve an Instance ID token for use with FCM.
   // ...
-})*/
+})
 
-  return  messaging.getToken()
+ /* return  messaging.getToken()
   .then(function(currentToken) {
     alert(currentToken);
   })
-
+  */
 
 .catch(function(err) {
   alert('Unable to get permission to notify.', err);
