--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ messaging.requestPermission()
 
 .then(function() {
   //alert('Notification permission granted.');
-   alert(messaging.getToken())
+   alert(messaging.getToken()  returns firebase.Promise containing string)
   return messaging.getToken();
  
   
