--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ messaging.requestPermission()
   //alert('Notification permission granted.');
  /* return messaging.getToken();
    alert(messaging.getToken())*/
-
-     return messaging.getToken().then((token) => {
+       alert("hello ali");
+  /*   return messaging.getToken().then((token) => {
     alert(token);
-    });
+    });*/
   
  
   
