--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button id="sign-out" hidden>Sign Out</button>
 
       <button id="subscribe">
-        Subscribe
+        Subscribe new
         <img src="/img/bell.png" alt="Notifications">
       </button>
       <button id="unsubscribe" hidden>
