--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@ messaging.requestPermission()
   //alert('Notification permission granted.');
  /* return messaging.getToken();
    alert(messaging.getToken())*/
-       alert("hello ali");
-  /*   return messaging.getToken().then((token) => {
-    alert(token);
-    });*/
+     
+     return messaging.getToken().then((token) => {
+   // alert(token);
+   alert("new1");
+    });
   
  
   
