--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <script>
     // Initialize Firebase
-    var config = {
+  /*  var config = {
         apiKey: "AIzaSyD4_zMt8NByD4zsxQ8Ugw3NB9MrQN5vfiI",
         authDomain: "beautycenter-bb072.firebaseapp.com",
         databaseURL: "https://beautycenter-bb072.firebaseio.com",
@@ -68,7 +68,7 @@
         storageBucket: "beautycenter-bb072.appspot.com",
         messagingSenderId: "129581670274"
     };
-    firebase.initializeApp(config);
+    firebase.initializeApp(config);*/
 
     // Retrieve Firebase Messaging object.
 const FIREBASE_MESSAGING = firebase.messaging();
@@ -92,7 +92,7 @@ function subscribeToNotifications() {
 
 
 function handleTokenRefresh() {
-  alert(IREBASE_MESSAGING.getToken());
+  alert(IREBASE_MESSAGING.getToken().toString());
  /* return FIREBASE_MESSAGING.getToken().then((token) => {
 
     FIREBASE_DATABASE.ref('/tokens').push({
