--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
       }
 </script>
 
-  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-app.js"></script>
+<!--  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-messaging.js"></script>-->
 
   <script>
     // Initialize Firebase
-  /*  var config = {
+    var config = {
         apiKey: "AIzaSyD4_zMt8NByD4zsxQ8Ugw3NB9MrQN5vfiI",
         authDomain: "beautycenter-bb072.firebaseapp.com",
         databaseURL: "https://beautycenter-bb072.firebaseio.com",
@@ -68,7 +68,7 @@
         storageBucket: "beautycenter-bb072.appspot.com",
         messagingSenderId: "129581670274"
     };
-    firebase.initializeApp(config);*/
+    firebase.initializeApp(config);
 
     // Retrieve Firebase Messaging object.
 const FIREBASE_MESSAGING = firebase.messaging();
