--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ function subscribeToNotifications() {
 
 
 function handleTokenRefresh() {
-  alert(IREBASE_MESSAGING.getToken().toString());
+  alert("ffeerfetrewt");
  /* return FIREBASE_MESSAGING.getToken().then((token) => {
 
     FIREBASE_DATABASE.ref('/tokens').push({
