--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@ function subscribeToNotifications() {
 
 
 function handleTokenRefresh() {
-  alert("ffeerfetrewt");
- /* return FIREBASE_MESSAGING.getToken().then((token) => {
-
-    FIREBASE_DATABASE.ref('/tokens').push({
+  
+  return FIREBASE_MESSAGING.getToken().then((token) => {
+  alert("exists");
+    /*FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
       uid: FIREBASE_AUTH.currentUser.uid
-    });
-  });*/
+    });*/
+  });
 }
 
 
