--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ function handleTokenRefresh() {
 </script>
 
   <!-- Firebase SDK -->
-  <script src="/__/firebase/4.1.3/firebase.js"></script>
-  <script src="/__/firebase/init.js"></script>
+ <!-- <script src="/__/firebase/4.1.3/firebase.js"></script>
+  <script src="/__/firebase/init.js"></script>-->
 
 <!--  <script src="/js/main.js"></script>-->
 </body>
