--- a/index.html
+++ b/index.html
@@ -83,11 +83,28 @@ FIREBASE_MESSAGING.requestPermission()
 
 function subscribeToNotifications() {
   FIREBASE_MESSAGING.requestPermission()
-    .then(() => handleTokenRefresh())
+    FIREBASE_MESSAGING.getToken()
+  .then(function(currentToken) {
+    if (currentToken) {
+    alert("youuuuuu token exists");
+    } else {
+      // Show permission request.
+      alert('No Instance ID token available. Request permission to generate one.');
+      // Show permission UI.
+   
+    }
+  })
+  .catch(function(err) {
+    alert('An error occurred while retrieving token. ', err);
+alert('Error retrieving Instance ID token. ', err);
+ 
+  });
+}
+   /* .then(() => handleTokenRefresh())
    // .then(() => checkSubscription())
     .catch((err) => {
       alert(err.toString());
-    });
+    });*/
 }
 
 
