--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@ function subscribeToNotifications() {
 
 function handleTokenRefresh() {
  
-   return FIREBASE_MESSAGING.getToken().then((token) => {
-   alert("yes exists");
+   return FIREBASE_MESSAGING.getToken();
+ 
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
       uid: FIREBASE_AUTH.currentUser.uid
     });*/
-  });
+  
 }
 
 
