--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ function subscribeToNotifications() {
 
 function handleTokenRefresh() {
  
-   return FIREBASE_MESSAGING.getToken();
- 
+   //return FIREBASE_MESSAGING.getToken();
+ alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
       uid: FIREBASE_AUTH.currentUser.uid
