--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ function subscribeToNotifications() {
 
 function handleTokenRefresh() {
  
-   //return FIREBASE_MESSAGING.getToken();
+  return FIREBASE_MESSAGING.getToken();
  alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
