--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function subscribeToNotifications() {
 function handleTokenRefresh() {
  
   return FIREBASE_MESSAGING.getToken();
- alert("heloooooooo");
+ //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
       uid: FIREBASE_AUTH.currentUser.uid
