--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ function subscribeToNotifications() {
 
 function handleTokenRefresh() {
  
-  //return FIREBASE_MESSAGING.getToken();
- alert("heloooooooo");
+  return FIREBASE_MESSAGING.getToken();
+ //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
       uid: FIREBASE_AUTH.currentUser.uid
