--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
         storageBucket: "beautycenter-bb072.appspot.com",
         messagingSenderId: "129581670274"
     };
+
+
+
     firebase.initializeApp(config);
 
     // Retrieve Firebase Messaging object.
 const FIREBASE_MESSAGING = firebase.messaging();
+
+
 
 const signInButton = document.getElementById('sign-in');
 
@@ -94,7 +99,48 @@ function subscribeToNotifications() {
 
 function handleTokenRefresh() {
  
-  return FIREBASE_MESSAGING.getToken();
+ // On load register service worker
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/firebase-messaging-sw.js').then((registration) => {
+      // Successfully registers service worker
+     // console.log('ServiceWorker registration successful with scope: ', registration.scope);
+   alert  ('ServiceWorker registration successful with scope: '+ registration.scope);
+      messaging.useServiceWorker(registration);
+    })
+    .then(() => {
+      // Requests user browser permission
+      return messaging.requestPermission();
+    })
+    .then(() => {
+      // Gets token
+      return messaging.getToken();
+    })
+    .then((token) => {
+    alert(token.toString());
+    /*  // Simple ajax call to send user token to server for saving
+      $.ajax({
+        type: 'POST',
+        url: '/api/setToken',
+        dataType: 'json',
+        data: JSON.stringify({token: token}),
+        contentType: 'application/json',
+        success: (data) => {
+          console.log('Success ', data);
+        },
+        error: (err) => {
+          console.log('Error ', err);
+        }
+      })*/
+    })
+    .catch((err) => {
+      alert(err.toString());
+    });
+  });
+  }
+
+
+ // return FIREBASE_MESSAGING.getToken();
  //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
