--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ if ('serviceWorker' in navigator) {
       return messaging.getToken();
     })
     .then((token) => {
-    alert(token.toString());
+    alert("yes exists");
     /*  // Simple ajax call to send user token to server for saving
       $.ajax({
         type: 'POST',
