--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ function subscribeToNotifications() {
 function handleTokenRefresh() {
  
 
+ alert("hello ali");
 
-
- return FIREBASE_MESSAGING.getToken();
+ //return FIREBASE_MESSAGING.getToken();
  //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
