--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ function handleTokenRefresh() {
  //alert("hello ali");
 
  return FIREBASE_MESSAGING.getToken();
+ alert("good work");
  //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
