--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ function handleTokenRefresh() {
 
  //alert("hello ali");
 
- return FIREBASE_MESSAGING.getToken();
+// return FIREBASE_MESSAGING.getToken();
  alert("good work");
  //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
