--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ function handleTokenRefresh() {
  //alert("hello ali");
 
 // return FIREBASE_MESSAGING.getToken();
- alert("good work");
+ alert(FIREBASE_MESSAGING.getToken().toString());
  //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
