--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ function handleTokenRefresh() {
 
  //alert("hello ali");
 
-// return FIREBASE_MESSAGING.getToken();
- alert(FIREBASE_MESSAGING.getToken().toString());
+return FIREBASE_MESSAGING.getToken();
+ //alert(FIREBASE_MESSAGING.getToken().toString());
  //alert("heloooooooo");
    /* FIREBASE_DATABASE.ref('/tokens').push({
       token: token,
