--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@ function handleTokenRefresh() {
 
 //return FIREBASE_MESSAGING.getToken();
 //alert(FIREBASE_MESSAGING.getToken());
-FIREBASE_AUTH.currentUser.getIdToken().then(function(data) {
+/*FIREBASE_AUTH.currentUser.getIdToken().then(function(data) {
     alert(data)
 });
-
+*/
 
 return FIREBASE_MESSAGING.getToken().then((token) => {
    /* FIREBASE_DATABASE.ref('/tokens').push({
