--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ return FIREBASE_MESSAGING.getToken().then((token) => {
       uid: FIREBASE_AUTH.currentUser.uid
     });
     */
-    alert(FIREBASE_AUTH.currentUser.uid.toString());
+    alert("yes exists");
   });
 
 
