--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
 
 
-  <script src='https://www.gstatic.com/firebasejs/3.6.2/firebase.js'></script>
-  <script src='https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-
+  <script src='https://www.gstatic.com/firebasejs/4.8.1/firebase.js'></script>
+  <script src='https://www.gstatic.com/firebasejs/4.8.1/firebase-messaging.js'></script>
+  <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+-->
 
 <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script>
