--- a/index.html
+++ b/index.html
@@ -48,7 +48,30 @@
 
   <script>
       function myFunction() {
-          alert("I am an alert box!");
+       // This registration token comes from the client FCM SDKs.
+var registrationToken = "dFPAq-aoSLw:APA91bHZ3Xnl7F_G0unVpLsnlNzCnqNFzLG8DZtNKKGGMArGgjeClFWM5K1EEiN09rAz1-qS79-PsAXxmlpBHtwLnIIJ3WLCqQjuvoW2NesbxFjjwbpAqzopGy_lSTwYtkVy6d4NQT0y";
+
+// See the "Defining the message payload" section below for details
+// on how to define a message payload.
+var payload = {
+  data: {
+    score: "850",
+    time: "2:45"
+  }
+};
+
+// Send a message to the device corresponding to the provided
+// registration token.
+admin.messaging().sendToDevice(registrationToken, payload)
+  .then(function(response) {
+    // See the MessagingDevicesResponse reference documentation for
+    // the contents of response.
+  alert("Successfully sent message:"+response);
+  })
+  .catch(function(error) {
+    alert("Error sending message:"+error);
+  });
+
       }
 </script>
 
