--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script>
       function myFunction() {
        // This registration token comes from the client FCM SDKs.
-var registrationToken = "dFPAq-aoSLw:APA91bHZ3Xnl7F_G0unVpLsnlNzCnqNFzLG8DZtNKKGGMArGgjeClFWM5K1EEiN09rAz1-qS79-PsAXxmlpBHtwLnIIJ3WLCqQjuvoW2NesbxFjjwbpAqzopGy_lSTwYtkVy6d4NQT0y";
+var registrationToken = "cvWi7b-Hrb4:APA91bHNIZpgLcGcD7Pv8qtCdkT7WoM-QxgkIfEQSmLqKfjDSmLCRGUixIRvLuHhCZescs43R5F5lxY1WRT_gXmtv5jRISaV2v1_PEMvZEn5SuRJpnUTMl5e-Q7NoyqbTwk8LhzzKYZj";
 
 // See the "Defining the message payload" section below for details
 // on how to define a message payload.
